# notion

./: .gitignore  CODE_OF_CONDUCT.md  README.md  pyproject.toml  test.py
.github/workflows/: codeql-analysis.yml  notion.yml
notion/: client.py  types.py
tests/: conftest.py  test_client.py  test_notion.py  test_types.py
