[tool.poetry]
name = "notion"
version = "0.1.0"
description = ""
authors = ["Yrieix Leprince <yrieix.leprince@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.19.2"
responses = "^0.16.0"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.910"
pre-commit = "^2.15.0"
pytest = "6.2.5"
pytest-cov = "^3.0.0"
taskipy = "1.9.0"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.taskipy.tasks]
check_lint = "task check_isort && task lint_mypy && task check_black && task lint_flake8"
check_isort = "isort . --check-only"
lint_mypy = "mypy ./notion ./tests"
check_black = "black . --check --diff"
lint_flake8 = "flake8 ."

lint_format = "isort . && black . && task lint_mypy && task lint_flake8"


test_cov = "pytest --cov --cov-fail-under=100"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
